--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       // Estado en memoria (sin query params)
       let data = {};
       let rawData = {};
+      let tx = null;
 
       // Estructura de sets: { sets: { ... } }
       let sets = (data && data.sets) || {};
@@ -188,7 +189,7 @@
       function renderRobustBullet(
         canvasId,
         f,
-        { currency = "ARS", title = null } = {},
+        { currency = "ARS", title = null, tx: txObj = null } = {},
       ) {
         // Acepta tanto estructura anidada como plana dentro del set
         const med = +((f?.robust_stats?.median_abs) ?? f?.median_abs ?? 0);
@@ -210,7 +211,7 @@
           isFinite(hiOut) ? hiOut : med + 2 * mad,
           med + 2 * mad,
         );
-        const xMax = Math.max(baseMax, (p99 ?? baseMax) * 1.1);
+        let xMax = Math.max(baseMax, (p99 ?? baseMax) * 1.1);
 
         const fmt = new Intl.NumberFormat("es-AR", {
           style: "currency",
@@ -221,6 +222,29 @@
         const markers = [{ x: med, y: 0.5, label: "Mediana" }];
         if (p95 != null && isFinite(p95)) markers.push({ x: +p95, y: 0.5, label: "P95" });
         if (p99 != null && isFinite(p99)) markers.push({ x: +p99, y: 0.5, label: "P99" });
+
+        // Transacción superpuesta, si existe
+        const txDatasets = [];
+        if (txObj && typeof txObj.amount === 'number') {
+          const txAmt = Math.abs(+txObj.amount);
+          let z = null;
+          if (isFinite(mad) && mad !== 0) z = 0.6745 * Math.abs(txAmt - med) / mad;
+          let cls = 'normal';
+          if ((z != null && z >= 3.5) || (p99 != null && txAmt >= p99)) cls = 'outlier';
+          else if (p95 != null && txAmt > p95) cls = 'alto';
+          const color = cls === 'outlier' ? '#ef4444' : (cls === 'alto' ? '#f59e0b' : '#10b981');
+          xMax = Math.max(xMax, txAmt * 1.1);
+          txDatasets.push({
+            label: `Transacción (${cls}${z!=null?`, z≈${z.toFixed(2)}`:''})`,
+            data: [{ x: txAmt, y: 0.5, label: 'Transacción' }],
+            pointRadius: 6,
+            pointHoverRadius: 7,
+            pointBackgroundColor: color,
+            pointBorderColor: '#111',
+            pointBorderWidth: 1.5,
+            showLine: false,
+          });
+        }
 
         const robustBands = {
           id: "robustBands",
@@ -300,6 +324,7 @@
                 pointHoverRadius: 6,
                 showLine: false,
               },
+              ...txDatasets,
             ],
           },
           options: {
@@ -966,7 +991,7 @@
         if (hasTop) { hasAny = true; }
 
         if (s.robust_stats || s.median_abs != null || s.p95_abs != null) {
-          renderRobustBullet('setRobustBullet', s, { currency: 'ARS' });
+          renderRobustBullet('setRobustBullet', s, { currency: 'ARS', tx });
           const el = document.getElementById('setRobustSection'); if (el) el.classList.remove('hidden');
           hasAny = true;
         }
@@ -975,9 +1000,16 @@
           const hist = s.temporal.hour_hist;
           const hours = Object.keys(hist).map((h) => parseInt(h)).sort((a,b)=>a-b);
           const counts = hours.map((h) => hist[h]);
+          // Si hay transacción con hora, resaltar bin
+          let txHour = null;
+          if (tx && tx.created_time) {
+            const m = String(tx.created_time).match(/\b(\d{1,2}):(\d{2}):(\d{2})\b/);
+            if (m) txHour = parseInt(m[1], 10);
+          }
+          const bgColors = hours.map((h) => (txHour != null && h === txHour ? '#1d4ed8' : '#0d6efd'));
           chartOn('setHourChart', {
             type: 'bar',
-            data: { labels: hours, datasets: [{ label:'Operaciones', data: counts, backgroundColor: '#0d6efd' }] },
+            data: { labels: hours, datasets: [{ label:'Operaciones', data: counts, backgroundColor: bgColors }] },
             options: { scales: { y: { beginAtZero: true } } },
           });
           const el = document.getElementById('setHVSection'); if (el) el.classList.remove('hidden');
@@ -1138,6 +1170,14 @@
             data = parsed;
             rawData = JSON.parse(JSON.stringify(parsed));
             sets = parsed.sets || {};
+            // Transacción opcional
+            const tTxt = txInput.value.trim();
+            try {
+              tx = tTxt ? JSON.parse(tTxt) : null;
+            } catch (e) {
+              // si falla, ignoro la transacción pero no detengo el flujo
+              tx = null;
+            }
             // Render grupo General actualizado con nivel raíz del JSON
             renderGeneral(data || {});
             // Actualiza visor de JSON crudo
